ingress/deployments.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: web-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      server: web
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        server: web
    spec:
      containers:
      - name: webserver
        image: httpd:latest
        resources: 
          requests:
            memory: "128Mi"
            cpu: "200m"
          limits:
            memory: "256Mi"
            cpu: "500m"

        ports:
        - containerPort: 80
