ingress/challenge.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeservice
spec:
  selector:
    server: web
  type: NodePort
  ports:
  - port: 8080
    targetPort: 80
    nodePort: 31234
