ingress/loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: awslb
spec:
  selector:
    app: myPod

  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 80
