ingress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  selector:
    server: web
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 80
